# testy_greeny

./: README.md  Untitled Diagram.drawio  docker-compose.yml
app/: .env.dev  Dockerfile  app.py  cli.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  script.py  service.py  test.py
app/env/: .env.prod  .env.test
app/schema/: dto.py  enums.py
