[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["demogi4523 <demogi4523@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
gql = {extras = ["all"], version = "^3.4.0"}
typer = "^0.7.0"
databases = {extras = ["asyncpg"], version = "^0.7.0"}
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"
uvicorn = {extras = ["standart"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
